--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-/*.body{*/
-/*    background-color: blue;*/
-/*}*/
+body{
+    background-color: antiquewhite;
+}
 .container{
-    background-color: lawngreen;
+    background-color: bisque;
     font-family: 'Oswald', sans-serif;
 
 }
